--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ header {
 /*  background-image: url("red-lonely-chair-website-header-design.jpg");
   background-repeat: no-repeat;
 */
-  background-color: lightblue;
+  background-color: #9b3b00;
   background-position: center;
   background-size: cover;
   color: #fff;
