--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ header > h1 {
     opacity: 0.9;   
 }
 .footer {
-  background-color: lightblue;
+  background-color: #843d00;
     clear: both;
     position: relative;
     height: 60px;
@@ -54,7 +54,6 @@ li {
     align-items: center;
     justify-content: center;
 }
-
 .hold{
   width: 1000px;
   margin: auto;
@@ -174,3 +173,5 @@ a.link{
 #insta img{
   width: 100%;
 }
+
+
