--- a/index.css
+++ b/index.css
@@ -156,8 +156,6 @@ a.link{
 .page-holder:hover .back{
   left: -100%;
 }
-
-
 #insta{
   position: fixed;
   top: 50px;
@@ -174,3 +172,37 @@ a.link{
 #insta img{
   width: 100%;
 }
+
+.zoomred {
+	position: absolute; left: 58%; top: 50%;
+	transition: transform .2s;
+}
+.zoomred:hover {
+  transform: scale(1.2);
+  z-index: +5;
+
+}
+.zoomblue {
+	position: absolute; left: 46%; top: 50%;
+	transition: transform .2s;
+}
+.zoomblue:hover {
+  transform: scale(1.2);
+  z-index: +5;
+
+}
+.zoomgreen {
+	position: absolute; left: 34%; top: 50%;
+	transition: transform .2s;
+}
+.zoomgreen:hover {
+  transform: scale(1.2);
+  z-index: +5;
+}
+
+.bookshelf {
+	position: absolute; left: 21.2%; top: 30%;
+	z-index: -1;
+}
+
+
