--- a/index.css
+++ b/index.css
@@ -26,16 +26,13 @@ header > h1 {
     opacity: 0.9;   
 }
 .footer {
-  background-color: lightblue;
-    clear: both;
-    position: relative;
-    height: 60px;
-    width: 100%;
-    padding-left: 0px;
-    margin-left: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
     
 }
 ul {
