--- a/index.css
+++ b/index.css
@@ -26,13 +26,14 @@ header > h1 {
     opacity: 0.9;   
 }
 .footer {
-   position: absolute;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: red;
-   color: white;
-   text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #8e6754;
+  color: white;
+  text-align: center;
+}
    z-index: +6;
     
 }
