--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ header > h1 {
     opacity: 0.9;   
 }
 .footer {
-  position: fixed;
+  position: realtive;
   left: 0;
   bottom: 0;
   width: 100%;
