--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ header > h1 {
     opacity: 0.9;   
 }
 .footer {
-  position: realtive;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -34,7 +34,7 @@ header > h1 {
   color: white;
   text-align: center;
 }
-   z-index: +6;
+  
     
 }
 ul {
