--- a/Project/CSS/index.css
+++ b/Project/CSS/index.css
@@ -236,4 +236,18 @@ font-size: 12px;
 text-align: center;
 } 
 
+#myVid {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  z-index: -100;
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+}
+
 
