--- a/Project/CSS/index.css
+++ b/Project/CSS/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #B9BE95;
+  background-color: #FFFFFF;
     margin:0;
     padding:0;
     overflow-x: hidden;
@@ -27,7 +27,7 @@ header > h1 {
     opacity: 0.9;   
 }
 .footer {
-    background-color: lightblue;
+    background-color: #F5FAFE;
     clear: both;
     position: relative;
     height: 60px;
