--- a/Project/CSS/index.css
+++ b/Project/CSS/index.css
@@ -5,19 +5,19 @@ body {
     overflow-x: hidden;
 }
 header {
-/*  background-image: url("red-lonely-chair-website-header-design.jpg");
-  background-repeat: no-repeat;
-*/
-  background-color: #F5FAFE;
+  height: 150px;
+  background-color: #3f3d3d;
   background-position: center;
   background-size: cover;
   color: #fff;
   text-shadow: #000 0 0 .2em;
-  height: 22%;
   text-align: center;
 }
 header > img {
-  height: 200px;
+  height: 100px;
+  margin-top: 25px;
+  margin-left: 200px;
+  float: left;
 }
 header > h1 {
     font: bold calc(1em + 2 * (100vw - 120px) / 100) 'Dancing Script', cursive,
@@ -26,8 +26,90 @@ header > h1 {
     display: inline-block;
     opacity: 0.9;   
 }
+.logotext {
+  height: 60px;
+  margin-left: 50px;
+  margin-top: 45px;
+  margin-right: 300px;
+}
+.topnav {
+  overflow: hidden;
+}
+.topnav a {
+  float: left;
+  display: block;
+  color: #68c2e8;
+  text-align: center;
+  padding: 3px 3px;
+  text-decoration: none;
+  font-size: 17px;
+  margin-top: 60px;
+  margin-right: 10px;
+}
+
+.topnav a:hover {
+  background-color: green;
+  color: blue;
+}
+
+.topnav a.active {
+  background-color: #969191;
+  color: #FFFFFF;
+  opacity: .7;
+
+}
+
+.topnav .search-container {
+  float: right;
+  margin-top: 48px;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  height: 32px;
+}
+.topnav .search-container button img {
+  height: 14px;
+  margin-top: 2px;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
 .footer {
-    background-color: #F5FAFE;
+    background-color: #3f3d3d;
+    color: white;
     clear: both;
     position: relative;
     height: 60px;
@@ -37,7 +119,6 @@ header > h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
 ul {
   margin: 0;
